@startuml
skinparam classAttributeIconSize 0

class WareHouseUI{
}

class WareHouseController {
+ getWareHouseAvailabilty()
+ getWareHouseEstimation()
}

class ConnectionFactory {
+ getInstance()
+ getDatabaseConnection()
}

class CargoManifestStore {
+ wareHouseOccupancyByDate (DatabaseConnection databaseConnection)
+ wareHouseEstimation(DatabaseConnection databaseConnection)
}

class DatabaseConnection {
+ getConnection()
}



WareHouseController <.up. WareHouseUI
WareHouseController "1" --> "1..*" ConnectionFactory : uses
WareHouseController "1" --> "1" CargoManifestStore : uses
CargoManifestStore "1" --> "1..*" DatabaseConnection : uses



@enduml